--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -1,27 +1,11 @@
 @use 'variables' as v; 
 
 /** Media Queries **/
-@mixin telefono {
-    @media (min-width: v.$telefono) {
-        @content;
-    }
-}
-@mixin tablet {
-    @media (min-width: v.$tablet) {
-        @content;
-    }
-}
 @mixin desktop {
     @media (min-width: v.$desktop) {
         @content;
     }
 }
-@mixin desktopXL {
-    @media (min-width: v.$desktopxl) {
-        @content;
-    }
-}
-
 
 @mixin boton($bgColor, $colorTexto) {
     background-color: $bgColor;
@@ -37,7 +21,7 @@
     transition-duration: .3s;
     text-align: center;
 
-    @include tablet {
+    @include desktop() {
         width: auto;
     }
     &:hover {
@@ -49,4 +33,24 @@
     display: grid;
     gap: $espaciado;
     grid-template-columns: repeat($columnas, 1fr);
+}
+
+@mixin heading($salto: false) {
+    font-weight: 400;
+
+    span {
+        font-weight: 700;
+        @if($salto) {
+            display: block;
+        }
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        height: 1rem;
+        width: 15rem;
+        margin-top: 1rem;
+        background-image: linear-gradient( to right, v.$primario 0%, v.$primario 50%, lighten(v.$primario, 20%) 50%, lighten(v.$primario, 20%) 100%  );
+    }
 }
